<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bluebird Radio</string>
    <string name="action_settings">Settings</string>
    <string name="start_service">Start service</string>
    <string name="service_started">Service started</string>
    <string name="service_stopped">Service stopped</string>
    <string name="initialize_failed">Service Failed</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_manage_accounts">Manage accounts</string>
    <string name="title_activity_view_licenses">Opensource Licenses</string>
    <string name="add_account">Add account</string>
    <string name="title_delete_account">Delete account?</string>
    <string name="message_delete_account">Do you want to delete this account?</string>
    <string name="logged_in">Logged in successfully</string>
    <string name="not_logged_in">Login failed</string>

    <string name="noti_running">Running</string>
    <string name="noti_action_stop">Stop</string>

    <string name="category_options">Options</string>
    <string name="category_accounts">Accounts</string>
    <string name="category_misc">Misc</string>
    <string name="title_stop_on_unplugged">Stop on headset unplugged</string>
    <string name="summary_stop_on_unplugged">Stop Bluebird Radio when headset unplugged</string>
    <string name="title_remove_url">Don\'t speak URL</string>
    <string name="summary_remove_url">URL is annoying to listen in common case.</string>
    <string name="title_manage_account">Manage accounts</string>
    <string name="summary_manage_account">Manage accounts for Bluebird Radio</string>
    <string name="title_speak_screenname">Speak screen name</string>
    <string name="summary_speak_screenname">Speak screen name instead of account name</string>
    <string name="title_mute_time">Mute same tweet in duration.</string>
    <string name="summary_mute_time">write in seconds</string>
    <string name="title_merge_continuous">Merge continuous letters</string>
    <string name="summary_merge_continuous">Continuous letters can be annoying</string>
    <string name="title_tts_settings">TTS settings</string>
    <string name="summary_tts_settings">Text to Speech settings</string>

    <string name="unable_get_oauth_token">Unable to get OAuth token</string>
    <!-- 0: source user, 1: formatted text -->
    <string name="retweeted_by">Retweeted by {0}. {1}</string>
    <!-- 0: source message, 1: target message -->
    <string name="quoted_by">{0}. Quoting {1}</string>
    <!-- 0: source user, 1: text -->
    <string name="dm_from">Direct message from {0}: {1}</string>
    <!-- 0: source user, 1: target user -->
    <string name="followed_by">{1} followed by {0}</string>


    <string name="ACTION_CHANGE_PREFERENCE" translatable="false">ACTION_CHANGE_PREFERENCE</string>
    <string name="ACTION_SERVICE_TOGGLE" translatable="false">ACTION_SERVICE_TOGGLE</string>

</resources>
