<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/title_activity_settings">

    <PreferenceCategory android:title="@string/category_options">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="stop_on_unplugged"
            android:summary="@string/summary_stop_on_unplugged"
            android:title="@string/title_stop_on_unplugged" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="speak_screenname"
            android:summary="@string/summary_speak_screenname"
            android:title="@string/title_speak_screenname" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="remove_url"
            android:summary="@string/summary_remove_url"
            android:title="@string/title_remove_url" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="merge_continuous"
            android:summary="@string/summary_merge_continuous"
            android:title="@string/title_merge_continuous" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/category_accounts">
        <Preference
            android:summary="@string/summary_manage_account"
            android:title="@string/title_manage_account">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="kai.twitter.voice.manageAccount.ManageAccountsActivity"
                android:targetPackage="kai.twitter.voice" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/category_misc">
        <EditTextPreference
            android:defaultValue="60"
            android:key="mute_time"
            android:numeric="integer"
            android:summary="@string/summary_mute_time"
            android:title="@string/title_mute_time" />
        <Preference android:title="Open source licenses">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="kai.twitter.voice.ViewLicenses"
                android:targetPackage="kai.twitter.voice" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>